@@ -17,6 +17,7 @@ Current git version
   * Bug fixes:
     - Fix wrong behaviour in 'cycle_layout' in the case where the current layout
       is not contained in the layout list passed to 'cycle_layout'.
+    - React to a change of the 'floating_focused' attribute of the tag object
 
 Release 0.8.3 on 2020-06-06
 ---------------------------
